Fixed desktop nav links alignment for Careers and About / Added bottom positioning to svg

--- a/Landing Page 04/style.scss
+++ b/Landing Page 04/style.scss
@@ -324,7 +324,7 @@ main {
             &:nth-of-type(3),    
             &:nth-of-type(4){
               position: relative;
-              top:0.1rem;
+              top:0.14rem;
             }
 
             button {
@@ -334,6 +334,8 @@ main {
               svg {
                 transition: transform 0.3s ease-in;
                 transform: rotate(360deg);
+                position: relative;
+                bottom: 0.1rem;
               }
 
               font-size: 1rem;
